[package]
name = "astronaut"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.8"
once_cell = "1.13.1"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }

[build-dependencies]
cc="*"
